# creative-coding

001_dots_and_quads/: Cargo.toml
001_dots_and_quads/src/: dots.rs  main.rs
002_fish_skin/: Cargo.toml
002_fish_skin/src/: main.rs
003_epic_boids/: Cargo.toml
audio_experiments/: Cargo.toml
audio_experiments/src/: lib.rs
audio_experiments2/: Cargo.toml
audio_experiments2/src/: lib.rs
audiotest/: Cargo.toml
audiotest/src/: audio_spectrum.rs  dot.rs  main.rs  wave.rs
bevy_experiments/: Cargo.toml
bevy_experiments/src/: main.rs
gannoe/: Cargo.toml
gannoe/src/: lib.rs
pipewire/: Cargo.toml
pipewire/src/: main.rs
