[package]
name = "audiotest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
rayon = "1.6.1"
ringbuffer = "0.12.0"
simple-pulse-desktop-capture = "0.1.1"
spectrum-analyzer = "1.2.6"
